# QtOpencv

./: CMakeLists.txt  README.md  annotationparser.cpp  annotationparser.h  comparewidget.cpp  comparewidget.h  madsenhave.txt  mainwindow.cpp  mainwindow.h  videowidget.cpp  videowidget.h  yolo_detect_madsen.py  yolo_onnx_detect_madsen.py
